--- a/demo/demo/src/main/resources/application.properties
+++ b/demo/demo/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=demo
+
+#URL de conexion de H2
+spring.datasource.url=jdbc:h2:mem:demodb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Estrategia de creacion de schema
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Mostrar SQL por consola
+spring.jpa.show-sql=true
+
+server.port=8081
+
+#Dialecto de Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Activas consola web de H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
