--- a/demo/demo/src/main/resources/application.properties
+++ b/demo/demo/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.hibernate.ddl-auto=update
 # Mostrar SQL por consola
 spring.jpa.show-sql=true
 
-#server.port=8081
+server.port=8081
 
 #Dialecto de Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
