--- a/demo/demo/src/main/resources/application.properties
+++ b/demo/demo/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.application.name=demo
 #URL de conexion de MYSQL
 spring.datasource.url=jdbc:mysql://localhost:3306/demodb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Estrategia de creacion de schema
