Agregado para capturar errores de enpoints

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -28,3 +28,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #spring.h2.console.path=/h2-console
 
 spring.jpa.properties.hibernate.format_sql=true
+
+# Agregado para capturar y mandar un msj mas claro cuando no encuentre la ruta del enpoints
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
